2002-05-29  Keisuke Nishida  <knishida@netlab.jp>

	* Keep field names at run-time.
	* common.h (cob_field_desc): New member `name'.
	* common.c (cob_check_numeric): Display filed name on error.

	* Makefile.am (libcob_la_DEPENDENCIES): Add defaults.h.

2002-05-29  Keisuke Nishida  <knishida@netlab.jp>

	* termio.c (cob_init_termio): #include <string.h>

2002-05-29  Keisuke Nishida  <knishida@netlab.jp>

	* Support run-time config file: libcob.conf.
	* common.c (config_load, config_insert, cob_config_lookup):
	New functions.
	(cob_init): Call `config_load'.
	* common.h (cob_config_lookup): Declared.

	* call.c (dynamic_reloading): Renamed from cob_dynamic_reloading.
	(cob_init_call): Initialize `dynamic_reloading'.