@@ -39,10 +39,12 @@ extern void cob_decimal_print (cob_decimal d);
 extern void cob_decimal_set (cob_decimal dst, cob_decimal src);
 extern void cob_decimal_set_int (cob_decimal d, int n, int decimals);
 extern void cob_decimal_set_int64 (cob_decimal d, long long n, int decimals);
+extern void cob_decimal_set_double (cob_decimal d, double v);
 extern void cob_decimal_set_display (cob_decimal d, struct cob_field f);
 extern void cob_decimal_set_field (cob_decimal d, struct cob_field f);
 extern void cob_decimal_get (cob_decimal d, struct cob_field f);
 extern void cob_decimal_get_rounded (cob_decimal d, struct cob_field f);
+extern double cob_decimal_get_double (cob_decimal d);
 extern void cob_decimal_add (cob_decimal d1, cob_decimal d2);
 extern void cob_decimal_sub (cob_decimal d1, cob_decimal d2);
 extern void cob_decimal_mul (cob_decimal d1, cob_decimal d2);
